bk_ida/gobmkida/c1/attack4
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/attack4/src/engine/reading.c:3604:29: error: use of undeclared identifier 'byte_9AA89F'
&& v14 != ( unsigned __int8)byte_9AA89F[v16] 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/attack4/src/engine/reading.c:3605:29: error: use of undeclared identifier 'byte_9AA88C'
&& v14 != ( unsigned __int8)byte_9AA88C[v16] 
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/attack4/src/obj/1/reading.o] Error 1
